; ModuleID = '/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_mkdir.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_mkdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @p_mkdir(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i32 @GIT_UNUSED(i32 %7)
  %9 = load i32, i32* %6, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i64 @git_win32_path_from_utf8(i32 %9, i8* %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %17

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @_wmkdir(i32 %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %14, %13
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @GIT_UNUSED(i32) #1

declare dso_local i64 @git_win32_path_from_utf8(i32, i8*) #1

declare dso_local i32 @_wmkdir(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
